syntax = "proto3";
package chat;

option go_package = "grpc-post-body-test/chat;chat";

message Message {
  string body = 1;
}

import "google/api/annotations.proto";

service ChatService {
  // Unary RPC
  rpc UnaryChat (Message) returns (Message) {}

  // Client streaming RPC
  rpc ClientStreamChat (stream Message) returns (Message) {}

  // Server streaming RPC
  rpc ServerStreamChat (Message) returns (stream Message) {}

  // Bidirectional streaming RPC
  rpc BidirectionalStreamChat (stream Message) returns (stream Message) {}
}

service CallService {
  // Unary RPC
  rpc SayHello(Message) returns (Message) {
    option (google.api.http) = {
      post: "/v1/sayhello"
      body: "*"
    };
  }
}
